objects/hoopla__Notification_Queue__c.object
<CustomObject>
    <fields>
        <fullName>hoopla__Message_ID__c</fullName>
        <label>Message ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>hoopla__Message_Token__c</fullName>
        <label>Message Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hoopla__Message_Type__c</fullName>
        <label>Message Type</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hoopla__Message__c</fullName>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>hoopla__Primary_Object__c</fullName>
        <label>Primary Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hoopla__Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Verified</label>
        <type>Checkbox</type>
    </fields>
    <label>Notification Queue</label>
    <nameField>
        <label>Notification Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Notification Queues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>